fixed collapsing

--- a/css/projstyle.css
+++ b/css/projstyle.css
@@ -51,13 +51,15 @@
   -moz-transform-origin: 0 0;
 }
 
-/*#geology {
+#geology {
   background: orangered url("/img/DelicateArch.jpg");
   color: white;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
-}*/
+  overflow: auto;
+  height: auto;
+}
 
 #content 
 {
@@ -66,13 +68,4 @@
 
 #header {
   cursor: pointer;
-}
-
-body
-{
-  background: orangered url("/img/DelicateArch.jpg");
-  color: white;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
 }
